# diplom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: actions.yaml  bild_and_deploy.yaml
deploy/: .env  docker-compose.yaml  env
deploy/nginx/: default.conf
src/: .env  Dockerfile
src/bot/: serializers.py  urls.py
src/bot/management/commands/: runbot.py
src/bot/migrations/: 0001_initial.py
src/bot/tg/: client.py
src/bot/tg/fsm/: memory_storage.py
src/core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/goals/: admin.py  models.py  permissions.py  serializers.py  views.py
src/goals/migrations/: 0001_initial.py  0002_alter_goalcategory_created_and_more.py  0003_alter_goalcategory_unique_together.py  0004_goal.py  0005_goalcomment.py  0006_board_goalcategory_board_boardparticipant.py  0007_create_new_objects.py  0008_alter_goalcategory_board.py
src/goals/tests/: test_boards.py  test_categories.py  test_goals.py
src/todolist/: asgi.py  settings.py  urls.py
